[gd_scene load_steps=8 format=2]

[ext_resource path="res://StoneMaterial.tres" type="Material" id=1]
[ext_resource path="res://AlchemyStation.gd" type="Script" id=2]
[ext_resource path="res://Models/Sign_2.obj" type="ArrayMesh" id=3]
[ext_resource path="res://Cauldron.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sign.tscn" type="PackedScene" id=5]

[sub_resource type="CylinderMesh" id=1]
top_radius = 12.0
bottom_radius = 16.0
radial_segments = 7

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( 0, 1, 10, 7.8183, 1, 6.2349, 0, 0.6, 10.8, 7.8183, 1, 6.2349, 8.4438, 0.6, 6.7337, 0, 0.6, 10.8, 7.8183, 1, 6.2349, 9.7493, 1, -2.2252, 8.4438, 0.6, 6.7337, 9.7493, 1, -2.2252, 10.5292, 0.6, -2.4032, 8.4438, 0.6, 6.7337, 9.7493, 1, -2.2252, 4.3388, 1, -9.0097, 10.5292, 0.6, -2.4032, 4.3388, 1, -9.0097, 4.6859, 0.6, -9.7305, 10.5292, 0.6, -2.4032, 4.3388, 1, -9.0097, -4.3388, 1, -9.0097, 4.6859, 0.6, -9.7305, -4.3388, 1, -9.0097, -4.6859, 0.6, -9.7305, 4.6859, 0.6, -9.7305, -4.3388, 1, -9.0097, -9.7493, 1, -2.2252, -4.6859, 0.6, -9.7305, -9.7493, 1, -2.2252, -10.5292, 0.6, -2.4032, -4.6859, 0.6, -9.7305, -9.7493, 1, -2.2252, -7.8183, 1, 6.2349, -10.5292, 0.6, -2.4032, -7.8183, 1, 6.2349, -8.4438, 0.6, 6.7337, -10.5292, 0.6, -2.4032, -7.8183, 1, 6.2349, 0, 1, 10, -8.4438, 0.6, 6.7337, 0, 1, 10, 0, 0.6, 10.8, -8.4438, 0.6, 6.7337, 0, 0.6, 10.8, 8.4438, 0.6, 6.7337, 0, 0.2, 11.6, 8.4438, 0.6, 6.7337, 9.0692, 0.2, 7.2325, 0, 0.2, 11.6, 8.4438, 0.6, 6.7337, 10.5292, 0.6, -2.4032, 9.0692, 0.2, 7.2325, 10.5292, 0.6, -2.4032, 11.3092, 0.2, -2.5812, 9.0692, 0.2, 7.2325, 10.5292, 0.6, -2.4032, 4.6859, 0.6, -9.7305, 11.3092, 0.2, -2.5812, 4.6859, 0.6, -9.7305, 5.0331, 0.2, -10.4512, 11.3092, 0.2, -2.5812, 4.6859, 0.6, -9.7305, -4.6859, 0.6, -9.7305, 5.0331, 0.2, -10.4512, -4.6859, 0.6, -9.7305, -5.0331, 0.2, -10.4512, 5.0331, 0.2, -10.4512, -4.6859, 0.6, -9.7305, -10.5292, 0.6, -2.4032, -5.0331, 0.2, -10.4512, -10.5292, 0.6, -2.4032, -11.3092, 0.2, -2.5812, -5.0331, 0.2, -10.4512, -10.5292, 0.6, -2.4032, -8.4438, 0.6, 6.7337, -11.3092, 0.2, -2.5812, -8.4438, 0.6, 6.7337, -9.0692, 0.2, 7.2325, -11.3092, 0.2, -2.5812, -8.4438, 0.6, 6.7337, 0, 0.6, 10.8, -9.0692, 0.2, 7.2325, 0, 0.6, 10.8, 0, 0.2, 11.6, -9.0692, 0.2, 7.2325, 0, 0.2, 11.6, 9.0692, 0.2, 7.2325, 0, -0.2, 12.4, 9.0692, 0.2, 7.2325, 9.6947, -0.2, 7.7313, 0, -0.2, 12.4, 9.0692, 0.2, 7.2325, 11.3092, 0.2, -2.5812, 9.6947, -0.2, 7.7313, 11.3092, 0.2, -2.5812, 12.0891, -0.2, -2.7593, 9.6947, -0.2, 7.7313, 11.3092, 0.2, -2.5812, 5.0331, 0.2, -10.4512, 12.0891, -0.2, -2.7593, 5.0331, 0.2, -10.4512, 5.3802, -0.2, -11.172, 12.0891, -0.2, -2.7593, 5.0331, 0.2, -10.4512, -5.0331, 0.2, -10.4512, 5.3802, -0.2, -11.172, -5.0331, 0.2, -10.4512, -5.3802, -0.2, -11.172, 5.3802, -0.2, -11.172, -5.0331, 0.2, -10.4512, -11.3092, 0.2, -2.5812, -5.3802, -0.2, -11.172, -11.3092, 0.2, -2.5812, -12.0891, -0.2, -2.7593, -5.3802, -0.2, -11.172, -11.3092, 0.2, -2.5812, -9.0692, 0.2, 7.2325, -12.0891, -0.2, -2.7593, -9.0692, 0.2, 7.2325, -9.6947, -0.2, 7.7313, -12.0891, -0.2, -2.7593, -9.0692, 0.2, 7.2325, 0, 0.2, 11.6, -9.6947, -0.2, 7.7313, 0, 0.2, 11.6, 0, -0.2, 12.4, -9.6947, -0.2, 7.7313, 0, -0.2, 12.4, 9.6947, -0.2, 7.7313, 0, -0.6, 13.2, 9.6947, -0.2, 7.7313, 10.3202, -0.6, 8.2301, 0, -0.6, 13.2, 9.6947, -0.2, 7.7313, 12.0891, -0.2, -2.7593, 10.3202, -0.6, 8.2301, 12.0891, -0.2, -2.7593, 12.869, -0.6, -2.9373, 10.3202, -0.6, 8.2301, 12.0891, -0.2, -2.7593, 5.3802, -0.2, -11.172, 12.869, -0.6, -2.9373, 5.3802, -0.2, -11.172, 5.7273, -0.6, -11.8928, 12.869, -0.6, -2.9373, 5.3802, -0.2, -11.172, -5.3802, -0.2, -11.172, 5.7273, -0.6, -11.8928, -5.3802, -0.2, -11.172, -5.7273, -0.6, -11.8928, 5.7273, -0.6, -11.8928, -5.3802, -0.2, -11.172, -12.0891, -0.2, -2.7593, -5.7273, -0.6, -11.8928, -12.0891, -0.2, -2.7593, -12.869, -0.6, -2.9373, -5.7273, -0.6, -11.8928, -12.0891, -0.2, -2.7593, -9.6947, -0.2, 7.7313, -12.869, -0.6, -2.9373, -9.6947, -0.2, 7.7313, -10.3202, -0.6, 8.2301, -12.869, -0.6, -2.9373, -9.6947, -0.2, 7.7313, 0, -0.2, 12.4, -10.3202, -0.6, 8.2301, 0, -0.2, 12.4, 0, -0.6, 13.2, -10.3202, -0.6, 8.2301, 0, -0.6, 13.2, 10.3202, -0.6, 8.2301, 0, -1, 14, 10.3202, -0.6, 8.2301, 10.9456, -1, 8.7289, 0, -1, 14, 10.3202, -0.6, 8.2301, 12.869, -0.6, -2.9373, 10.9456, -1, 8.7289, 12.869, -0.6, -2.9373, 13.649, -1, -3.1153, 10.9456, -1, 8.7289, 12.869, -0.6, -2.9373, 5.7273, -0.6, -11.8928, 13.649, -1, -3.1153, 5.7273, -0.6, -11.8928, 6.0744, -1, -12.6136, 13.649, -1, -3.1153, 5.7273, -0.6, -11.8928, -5.7273, -0.6, -11.8928, 6.0744, -1, -12.6136, -5.7273, -0.6, -11.8928, -6.0744, -1, -12.6136, 6.0744, -1, -12.6136, -5.7273, -0.6, -11.8928, -12.869, -0.6, -2.9373, -6.0744, -1, -12.6136, -12.869, -0.6, -2.9373, -13.649, -1, -3.1153, -6.0744, -1, -12.6136, -12.869, -0.6, -2.9373, -10.3202, -0.6, 8.2301, -13.649, -1, -3.1153, -10.3202, -0.6, 8.2301, -10.9456, -1, 8.7289, -13.649, -1, -3.1153, -10.3202, -0.6, 8.2301, 0, -0.6, 13.2, -10.9456, -1, 8.7289, 0, -0.6, 13.2, 0, -1, 14, -10.9456, -1, 8.7289, 0, 1, 0, 7.8183, 1, 6.2349, 0, 1, 10, 0, 1, 0, 9.7493, 1, -2.2252, 7.8183, 1, 6.2349, 0, 1, 0, 4.3388, 1, -9.0097, 9.7493, 1, -2.2252, 0, 1, 0, -4.3388, 1, -9.0097, 4.3388, 1, -9.0097, 0, 1, 0, -9.7493, 1, -2.2252, -4.3388, 1, -9.0097, 0, 1, 0, -7.8183, 1, 6.2349, -9.7493, 1, -2.2252, 0, 1, 0, 0, 1, 10, -7.8183, 1, 6.2349, 0, -1, 0, 0, -1, 14, 10.9456, -1, 8.7289, 0, -1, 0, 10.9456, -1, 8.7289, 13.649, -1, -3.1153, 0, -1, 0, 13.649, -1, -3.1153, 6.0744, -1, -12.6136, 0, -1, 0, 6.0744, -1, -12.6136, -6.0744, -1, -12.6136, 0, -1, 0, -6.0744, -1, -12.6136, -13.649, -1, -3.1153, 0, -1, 0, -13.649, -1, -3.1153, -10.9456, -1, 8.7289, 0, -1, 0, -10.9456, -1, 8.7289, 0, -1, 14 )

[node name="AlchemyStation" type="Spatial"]
script = ExtResource( 2 )

[node name="Sign_2" type="MeshInstance" parent="."]
transform = Transform( -2.87138, 0, 0.579369, 0, 2.50001, 0, -0.869048, 0, -1.91424, 4.29032, 2.59257, 4.83669 )
mesh = ExtResource( 3 )
skeleton = NodePath("../..")

[node name="RecipeDisplay" parent="Sign_2" instance=ExtResource( 5 )]
transform = Transform( 0.333333, 0, 0, 0, 0.4, 0, 0, 0, 0.5, -0.157918, 1.01062, 0.0572891 )

[node name="Cauldron" parent="." instance=ExtResource( 4 )]
transform = Transform( 1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, -0.672042, 0 )

[node name="Platform" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="StaticBody" type="StaticBody" parent="Platform"]

[node name="CollisionShape" type="CollisionShape" parent="Platform/StaticBody"]
shape = SubResource( 2 )

[connection signal="recipe_failure" from="Cauldron" to="." method="_on_Cauldron_recipe_failure"]
[connection signal="recipe_success" from="Cauldron" to="." method="_on_Cauldron_recipe_success"]
